release-data/changelogs/8.3/plugins/benchmark-cis-ubuntu-20-04.adoc
= Changelogs for Rudder plugin benchmark-cis-ubuntu-20-04 8.3.\* versions

== benchmark-cis-ubuntu-20-04-8.3.12-0.10 (2026-06-12)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-ubuntu-20-04-8.3.11-0.10 (2026-05-04)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-ubuntu-20-04-8.3.10-0.10 (2026-04-01)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-ubuntu-20-04-8.3.9-0.10 (2026-02-16)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-ubuntu-20-04-8.3.8-0.10 (2025-12-22)

=== Changes


=== Bug fixes

==== Miscellaneous

* Fixed: There are still some mention to CIS in the benchmarks
    (https://issues.rudder.io/issues/28043[#28043])

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-ubuntu-20-04-8.3.7-0.10 (2025-12-10)

=== Changes


=== Bug fixes

==== Miscellaneous

* Fixed: Changes on whitespace semantic breaks benchmarks
    (https://issues.rudder.io/issues/27936[#27936])
* Fixed: Postint should create  /var/rudder/plugins/security-benchmarks/install otherwise rsync may fails
    (https://issues.rudder.io/issues/27794[#27794])
* Fixed: Rename the benchmarks RHEL 8, Debian 11, Debian 12 and Ubuntu 22 to remove CIS
    (https://issues.rudder.io/issues/27806[#27806])

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-ubuntu-20-04-8.3.5-0.10 (2025-10-02)

=== Changes


=== Bug fixes

==== Miscellaneous

* Fixed: There are some "null" in the bench descriptions
    (https://issues.rudder.io/issues/27583[#27583])

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-ubuntu-20-04-8.3.4-0.10 (2025-09-15)

=== Changes


=== Bug fixes

==== Miscellaneous

* Fixed: CIS - Debian 11 - Implement Section 6
    (https://issues.rudder.io/issues/27410[#27410])
* Fixed: CIS RHEL 8 Section 1.1.1.1 compliant code is reversed
    (https://issues.rudder.io/issues/27357[#27357])
* Fixed: multiple missing bash for calling resources script
    (https://issues.rudder.io/issues/27355[#27355])
* Fixed: RHEL 8 - Section 5.3 - Configure Integrity check
    (https://issues.rudder.io/issues/27223[#27223])

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-ubuntu-20-04-8.3.2-0.10 (2025-06-04)

=== Changes


==== Miscellaneous

* Manual items report a generic message and should include the item number
    (https://issues.rudder.io/issues/26929[#26929])

=== Bug fixes

==== Miscellaneous

* Fixed: Add the intermediate generated YAML to the repository
    (https://issues.rudder.io/issues/27030[#27030])

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-ubuntu-20-04-8.3.1-0.10 (2025-05-07)

=== Changes


=== Bug fixes

==== Miscellaneous

* Fixed: Missing parameters in the cis benchmarks
    (https://issues.rudder.io/issues/26837[#26837])

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-ubuntu-20-04-8.3.0-0.10 (2025-04-23)

=== Changes


=== Bug fixes

==== Miscellaneous

* Fixed: Do not index the CIS benchmark publicly
    (https://issues.rudder.io/issues/26716[#26716])

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

