release-data/changelogs/9.0/plugins/benchmark-cis-ubuntu-20-04.adoc
= Changelogs for Rudder plugin benchmark-cis-ubuntu-20-04 9.0.\* versions

== benchmark-cis-ubuntu-20-04-9.0.9-0.10 (2026-08-06)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-ubuntu-20-04-9.0.8-0.10 (2026-07-12)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-ubuntu-20-04-9.0.7-0.10 (2026-06-12)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-ubuntu-20-04-9.0.6-0.10 (2026-05-04)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-ubuntu-20-04-9.0.5-0.10 (2026-04-02)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-ubuntu-20-04-9.0.4-0.10 (2026-02-16)

=== Changes


==== Miscellaneous

* Refactor control point file key value and service restart
    (https://issues.rudder.io/issues/28016[#28016])

=== Bug fixes

==== Miscellaneous

* Fixed: CIS : rudder_syctl_file is not defined for the benchmark
    (https://issues.rudder.io/issues/28192[#28192])
* Fixed: Debian 12 : path for resource calling is not correct
    (https://issues.rudder.io/issues/28193[#28193])
* Fixed: Remove CIS mention in category.xml and control.yml
    (https://issues.rudder.io/issues/28146[#28146])
* Fixed: Update rudderc dependency in 9.0
    (https://issues.rudder.io/issues/28121[#28121])

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-ubuntu-20-04-9.0.3-0.10 (2025-12-22)

=== Changes


=== Bug fixes

==== Miscellaneous

* Fixed: There are still some mention to CIS in the benchmarks
    (https://issues.rudder.io/issues/28043[#28043])

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-ubuntu-20-04-9.0.2-0.10 (2025-12-10)

=== Changes


==== Miscellaneous

* Refactor all bash script call
    (https://issues.rudder.io/issues/27994[#27994])
* Add new CIS fields and display them in right part (sharing space with documentation)
    (https://issues.rudder.io/issues/27868[#27868])

=== Bug fixes

==== Miscellaneous

* Fixed: Changes on whitespace semantic breaks benchmarks
    (https://issues.rudder.io/issues/27936[#27936])
* Fixed: Postint should create  /var/rudder/plugins/security-benchmarks/install otherwise rsync may fails
    (https://issues.rudder.io/issues/27794[#27794])
* Fixed: Rename the benchmarks RHEL 8, Debian 11, Debian 12 and Ubuntu 22 to remove CIS
    (https://issues.rudder.io/issues/27806[#27806])

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-ubuntu-20-04-9.0.1-0.10 (2025-11-19)

=== Changes


==== Miscellaneous

* Allow fields to have no policy mode (only disabled) and display Manual and Unimplemented tags
    (https://issues.rudder.io/issues/27714[#27714])

=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-ubuntu-20-04-9.0.0-0.10 (2025-10-22)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-ubuntu-20-04-9.0.0.rc1-0.10 (2025-10-13)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-ubuntu-20-04-9.0.0.beta2-0.10 (2025-10-07)

=== Changes


=== Bug fixes

==== Miscellaneous

* Fixed: There are some "null" in the bench descriptions
    (https://issues.rudder.io/issues/27583[#27583])

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-ubuntu-20-04-9.0.0.beta1-0.10 (2025-09-09)

=== Changes


=== Bug fixes

==== Miscellaneous

* Fixed: CIS - Debian 11 - Implement Section 6
    (https://issues.rudder.io/issues/27410[#27410])
* Fixed: CIS RHEL 8 Section 1.1.1.1 compliant code is reversed
    (https://issues.rudder.io/issues/27357[#27357])
* Fixed: multiple missing bash for calling resources script
    (https://issues.rudder.io/issues/27355[#27355])

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

